--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="nav-left">
         <img src="https://www.cientifica.edu.pe/sites/default/files/logo-cientifica-blanco.svg" alt="Científica Logo" class="logo-cientifica" />
         <div class="nav-links desktop-only">
-          <a href="#" class="navbar-link">Inicio</a>
+          <a href="#" class="navbar-link">Departamento Académico de Cursos Básicos</a>
           <a href="#" class="navbar-link">Series</a>
           <a href="#" class="navbar-link">Películas</a>
           <a href="#" class="navbar-link">Novedades populares</a>
