--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <img src="https://www.cientifica.edu.pe/sites/default/files/logo-cientifica-blanco.svg" alt="Científica Logo" class="logo-cientifica" />
         <div class="nav-links desktop-only">
           <a href="#" class="navbar-link">Departamento Académico de Cursos Básicos</a>
-          <a href="#" class="navbar-link">Series</a>
-          <a href="#" class="navbar-link">Películas</a>
-          <a href="#" class="navbar-link">Novedades populares</a>
-          <a href="#" class="navbar-link">Mi lista</a>
+          <a href="#" class="navbar-link">Webinars</a>
+          <a href="#" class="navbar-link">Capacitaciones</a>
+          <a href="#" class="navbar-link">Talleres</a>
+          <a href="#" class="navbar-link">Eventos</a>
           <a href="#" class="navbar-link">Explorar por idiomas</a>
         </div>
         <div class="nav-dropdown mobile-only">
