--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
           <a href="#" class="navbar-link">Capacitaciones</a>
           <a href="#" class="navbar-link">Talleres</a>
           <a href="#" class="navbar-link">Eventos</a>
-          <a href="#" class="navbar-link">Explorar por idiomas</a>
+          <a href="#" class="navbar-link">Próximos</a>
         </div>
         <div class="nav-dropdown mobile-only">
-          <span>Explorar</span>
+          <span>Próximosr</span>
           <i class="icon-chevron-down"></i>
         </div>
       </div>
       
       <div class="nav-right">
         <i class="icon-search"></i>
-        <a href="#" class="navbar-link desktop-only">Niños</a>
+        <a href="#" class="navbar-link desktop-only">Internos</a>
         <i class="icon-bell"></i>
         <div class="profile">
           <img src="https://picsum.photos/id/237/32/32" alt="User Profile" class="profile-img" />
