--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
           <a href="#" class="navbar-link">Próximos</a>
         </div>
         <div class="nav-dropdown mobile-only">
-          <span>Próximosr</span>
+          <span>Eventos:</span>
           <i class="icon-chevron-down"></i>
         </div>
       </div>
       
       <div class="nav-right">
         <i class="icon-search"></i>
-        <a href="#" class="navbar-link desktop-only">Internos</a>
+        <a href="#" class="navbar-link desktop-only">Eventos internos</a>
         <i class="icon-bell"></i>
         <div class="profile">
           <img src="https://picsum.photos/id/237/32/32" alt="User Profile" class="profile-img" />
@@ -59,10 +59,10 @@
           <img src="https://picsum.photos/id/1005/1920/800" alt="Featured Content" class="hero-img" />
           <div class="hero-gradient"></div>
           <div class="hero-content">
-            <h1 class="hero-title">Descubre la Ciencia</h1>
+            <h1 class="hero-title">Descubre nuestros eventos</h1>
             <p class="hero-text">
-              Una aventura por los hallazgos más impresionantes del mundo científico moderno. 
-              Explora con nosotros los misterios del universo.
+              Explora todos los eventos que el Departamento Académico de Cursos Básicos de la Universidad Científica del Sur tiene para ti. 
+              Mejoras tú, mejora el mundo.
             </p>
             <div class="hero-buttons">
               <button class="button-play">
