--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="#" class="navbar-link">Próximos</a>
         </div>
         <div class="nav-dropdown mobile-only">
-          <span>Eventos:</span>
+          <span>Externos:</span>
           <i class="icon-chevron-down"></i>
         </div>
       </div>
