--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       <div class="nav-left">
         <img src="https://www.cientifica.edu.pe/sites/default/files/logo-cientifica-blanco.svg" alt="Científica Logo" class="logo-cientifica" />
         <div class="nav-links desktop-only">
-          <a href="#" class="navbar-link">Departamento Académico de Cursos Básicos</a>
-          <a href="#" class="navbar-link">Webinars</a>
-          <a href="#" class="navbar-link">Capacitaciones</a>
-          <a href="#" class="navbar-link">Talleres</a>
-          <a href="#" class="navbar-link">Eventos</a>
-          <a href="#" class="navbar-link">Próximos</a>
+          <a href="#" class="navbar-link">Departamento Académico de Cursos Básicos</a><span>•</span>
+          <a href="#" class="navbar-link">Webinars</a><span>•</span>
+          <a href="#" class="navbar-link">Capacitaciones</a><span>•</span>
+          <a href="#" class="navbar-link">Talleres</a><span>•</span>
+          <a href="#" class="navbar-link">Eventos</a><span>•</span>
+          <a href="#" class="navbar-link">Próximos</a><span>•</span>
         </div>
         <div class="nav-dropdown mobile-only">
           <span>Externos:</span>
