--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
         <div class="nav-links desktop-only">
           <a href="#" class="navbar-link"> Departamento Académico de Cursos Básicos </a><span>•</span>
           <a href="#" class="navbar-link"> Webinars </a>
-          <span>•</span>
+          <span> - </span>
           <a href="#" class="navbar-link"> Capacitaciones </a>
-          <span>•</span>
+          <span> - </span>
           <a href="#" class="navbar-link"> Talleres </a>
-          <span>•</span>
+          <span> - </span>
           <a href="#" class="navbar-link"> Eventos </a>
-          <span>•</span>
+          <span> - </span>
           <a href="#" class="navbar-link"> Próximos </a>
-          <span>•</span>
+          <span> - </span>
         </div>
         <div class="nav-dropdown mobile-only">
           <span>Externos:</span>
