--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       <div class="nav-left">
         <img src="https://www.cientifica.edu.pe/sites/default/files/logo-cientifica-blanco.svg" alt="Científica Logo" class="logo-cientifica" />
         <div class="nav-links desktop-only">
-          <a href="#" class="navbar-link"> Departamento Académico de Cursos Básicos </a><span>•</span>
+          <a href="#" class="navbar-link"> Departamento Académico de Cursos Básicos </a>
+          <span> - </span>
           <a href="#" class="navbar-link"> Webinars </a>
           <span> - </span>
           <a href="#" class="navbar-link"> Capacitaciones </a>
@@ -36,7 +37,6 @@
           <a href="#" class="navbar-link"> Eventos </a>
           <span> - </span>
           <a href="#" class="navbar-link"> Próximos </a>
-          <span> - </span>
         </div>
         <div class="nav-dropdown mobile-only">
           <span>Externos:</span>
