--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Científica Flix</title>
     <meta name="description" content="Streaming service clone for educational content" />
     <meta name="author" content="Científica" />
-
     <meta property="og:title" content="Científica Flix" />
     <meta property="og:description" content="Streaming service for educational content" />
     <meta property="og:type" content="website" />
@@ -24,7 +23,7 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar">
       <div class="nav-left">
-        <img src="/logo.png" alt="Científica Logo" class="logo-cientifica" />
+      <img src="https://www.cientifica.edu.pe/sites/default/files/logo-cientifica-blanco.svg" alt="Científica Logo" class="logo-cientifica" />       
         <div class="nav-links desktop-only">
           <a href="#" class="navbar-link"> Departamento Académico de Cursos Básicos </a>
           <span> - </span>
