--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar">
       <div class="nav-left">
-      <img src="https://www.cientifica.edu.pe/sites/default/files/logo-cientifica-blanco.svg" alt="Científica Logo" class="logo-cientifica" />       
+      <!<img src="https://www.cientifica.edu.pe/sites/default/files/logo-cientifica-blanco.svg" alt="Científica Logo" class="logo-cientifica" /> > 
+      <img src="/logo.png" alt="Científica Logo" class="logo-cientifica" /> 
         <div class="nav-links desktop-only">
           <a href="#" class="navbar-link"> Departamento Académico de Cursos Básicos </a>
           <span> - </span>
