--- a/index.html
+++ b/index.html
@@ -33,17 +33,14 @@
         </div>
         <div class="nav-dropdown mobile-only">
           <span>Externos:</span>
-          <i class="icon-chevron-down"></i>
         </div>
       </div>
       
       <div class="nav-right">
         <i class="icon-search"></i>
-        <a href="#" class="navbar-link desktop-only">Eventos internos</a>
-        <i class="icon-bell"></i>
+        <a href="#" class="navbar-link desktop-only">Certificados y constancias</a>
         <div class="profile">
           <img src="https://picsum.photos/id/237/32/32" alt="User Profile" class="profile-img" />
-          <i class="icon-chevron-down"></i>
         </div>
       </div>
     </nav>
