--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <i class="icon-search"></i>
         <a href="#" class="navbar-link desktop-only">Certificados y constancias</a>
         <div class="profile">
-          <img src="https://picsum.photos/id/237/32/32" alt="User Profile" class="profile-img" />
+          <img src="logo_peque.png" alt="UCS logo" class="profile-img" /> 
         </div>
       </div>
     </nav>
