--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       
       <div class="nav-right">
         <i class="icon-search"></i>
-        <div class="profile">
-          <img src="lupa.png" alt="Buscar" class="profile-img" /> 
-        </div>
+
+          <img src="lupa.png" alt="Buscar" /> 
+
         <a href="#" class="navbar-link desktop-only">Certificados y constancias</a>
         <div class="profile">
           <img src="logo_peque.png" alt="UCS logo" class="profile-img" /> 
