--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
       <div id="home-page" class="page active">
         <!-- Hero Section -->
         <div class="hero-section">
-          <img src="https://picsum.photos/id/1005/1920/800" alt="Featured Content" class="hero-img" />
+          <!--<img src="https://picsum.photos/id/1005/1920/800" alt="Featured Content" class="hero-img" />-->
+          <img src="la-universidad.jpg" alt="Featured Content" class="hero-img" />
           <div class="hero-gradient"></div>
           <div class="hero-content">
             <h1 class="hero-title">Descubre nuestros eventos</h1>
