--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="hero-content">
             <h1 class="hero-title">Descubre nuestros eventos</h1>
             <p class="hero-text">
-              Explora todos los eventos que el Departamento Académico de Cursos Básicos de la Universidad Científica del Sur tiene para ti. 
+              Explora todos los eventos que el Departamento Académico de Cursos Básicos de la Universidad Científica del Sur tiene para ti.<br>
               Mejoras tú, mejora el mundo.
             </p>
             <div class="hero-buttons">
