--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <!-- Navbar -->
     <nav id="navbar" class="navbar">
       <div class="nav-left"> 
-      <img src="logo-2.svg" alt="Científica Logo" class="logo-cientifica" /> 
+      <a href="https://www.cientifica.edu.pe/" target="_blank" rel="noopener">
+      <img src="logo-2.svg" alt="Científica Logo" class="logo-cientifica" /> </a>
         <div class="nav-links desktop-only">
           <a href="#" class="navbar-link"> Departamento Académico de Cursos Básicos </a>
           <a href="#" class="navbar-link"> Webinars </a>
