--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       
       <div class="nav-right">
           <img src="lupa.png" alt="Buscar" /> 
+          <i class="icon-search"></i>
         <a href="#" class="navbar-link desktop-only">Certificados y constancias</a>
         <div class="profile">
           <img src="logo_peque.png" alt="UCS logo" class="profile-img" /> 
