--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <span>•</span>
           <a href="#">Términos de uso</a>
         </div>
-        <p>© Departamento Académico de Cursos Básicos 2025, Universidad Científica del Sur.</p>
+        <p>© 2025 DACB, UCS.</p>
       </div>
     </footer>
 
