--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
         <!-- Hero Section -->
         <div class="hero-section">
           <!--<img src="https://picsum.photos/id/1005/1920/800" alt="Featured Content" class="hero-img" />-->
-          <img src="la-universidad.jpg" alt="Featured Content" class="hero-img" />
+            <div class="hero-image-container">
+              <img src="la-universidad.jpg" alt="Cientifica 1" class="hero-img" />
+              <img src="RANKING-2025-MOVIL.webp" alt="Cientifica 2" class="hero-img" />
+              <img src="RANKING-2025.webp" alt="Cientifica 3" class="hero-img" />
+              <img src="logo-2.svg" alt="Cientifica 4" class="hero-img" />
+              <img src="logo.png" alt="Cientifica 5" class="hero-img" />
+              <img src="logo_peque.png" alt="Cientifica 6" class="hero-img" />
+            </div>
           <div class="hero-gradient"></div>
           <div class="hero-content">
             <h1 class="hero-title">Descubre nuestros eventos</h1>
