--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
           <!--<img src="https://picsum.photos/id/1005/1920/800" alt="Featured Content" class="hero-img" />-->
             <div class="hero-image-container">
               <img src="la-universidad-1.jpg" alt="Cientifica 1" class="hero-img" />
-              <img src="la-universidad-2.jpg" alt="Cientifica 2" class="hero-img" />
-              <img src="la-universidad-3.jpg" alt="Cientifica 3" class="hero-img" />
-              <img src="la-universidad-4.jpg" alt="Cientifica 4" class="hero-img" />
-              <img src="la-universidad-5.jpg" alt="Cientifica 5" class="hero-img" />
-              <img src="la-universidad-6.jpg" alt="Cientifica 6" class="hero-img" />
-              <img src="la-universidad-7.jpg" alt="Cientifica 7" class="hero-img" />
+              <img src="la-universidad-2.webp" alt="Cientifica 2" class="hero-img" />
+              <img src="la-universidad-3.webp" alt="Cientifica 3" class="hero-img" />
+              <img src="la-universidad-4.webp" alt="Cientifica 4" class="hero-img" />
+              <img src="la-universidad-5.webp" alt="Cientifica 5" class="hero-img" />
+              <img src="la-universidad-6.webp" alt="Cientifica 6" class="hero-img" />
+              <img src="la-universidad-7.webp" alt="Cientifica 7" class="hero-img" />
               <img src="la-universidad-8.jpg" alt="Cientifica 8" class="hero-img" />
             </div>
           <div class="hero-gradient"></div>
