Update hero title and description in index.html

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             </div>
           <div class="hero-gradient"></div>
           <div class="hero-content">
-            <h1 class="hero-title">Descubre nuestros eventos</h1>
+            <h1 class="hero-title">Departamento Académico de Cursos Básicos</h1>
             <p class="hero-text">
-              Explora todos los eventos que el Departamento Académico de Cursos Básicos de la Universidad Científica del Sur tiene para ti.<br>
+              Explora todos los eventos que el DACB de la Universidad Científica del Sur tiene para ti.<br>
               Mejoras tú, mejora el mundo.
             </p>
             <div class="hero-buttons">
