--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
           <div class="hero-gradient"></div>
           <div class="hero-content">
-            <h1 class="hero-title">Departamento Académico <br> de <br> Cursos Básicos</h1>
+            <h1 class="hero-title">Departamento Académico de <br> Cursos Básicos</h1>
             <p class="hero-text">
               Explora todos los eventos que el DACB de la Universidad Científica del Sur tiene para ti.<br>
               Mejoras tú, mejora el mundo.
